...
                                ProgressView()
                                    .padding(.top, 60)
                            }
                            else if !viewModel.longDistanceRanking.isEmpty {
                                // LeaderBoards
                                LeaderboardNavigationView(viewModel: viewModel, navigationPath: $navigationPath, title: "Long Distance", leaderboard: viewModel.longDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: true, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("longDistanceNavigationView"))
                                
                                LeaderboardNavigationView(viewModel: viewModel,navigationPath: $navigationPath, title: "Short Distance", leaderboard: viewModel.shortDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: false, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("shortDistanceNavigationView"))
                            }
                            
                            if viewModel.errorMessage != nil {
...
    var body: some View {
        Text("Ranking")
            .font(.system(size: 32).bold())
            .padding(.vertical)
            .fontWeight(.semibold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("rankingTitle")
    }
}

private struct LeaderboardNavigationView: View {
    @Environment(\.colorScheme) var colorScheme: ColorScheme
    @Environment(\.horizontalSizeClass) var horizontalSizeClass
...
